# comfirm-dmarc-report-server

./: AUTHORS  COPYING  Makefile  Makefile.am  Makefile.in  README  README.md  README~  TODO  comfirm-dmarc_startup  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
config/: comfirm-dmarc.conf
firm-dkim-extended/: COPYING  Makefile  README  base64.c  firm-dkim.c  firm-dkim.h
src/: base.h  base64.c  base64.h  cache.c  config.h.in  config.h.in~  config_file.c  config_file.h  connection.c  connection.h  database.c  database.h  events.c  master_server.c  request.c  request.h  response.c  response.h  server.c  socket.c  worker.c  worker.h
src/lib-pq/: base.c  base.h  persisted_queue.c  persisted_queue.h
src/mailhandler/: base64.h  build  dns.c  dns.h  mailhandler.c  string_buffer.c  string_buffer.c~  string_buffer.h  string_buffer.h~
tests/: mail  sendtest
